--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 .idea/
 .DS_Store
+build/
+DerivedData/
+
+## Settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+
+## other
+*.moved-aside
+*.xcuserstate
