--- a/androidApp/GophertainmentAndroid/app/build.gradle
+++ b/androidApp/GophertainmentAndroid/app/build.gradle
@@ -19,12 +19,16 @@ android {
     }
 }
 
+ext {
+    supportLibVersion = '25.1.0'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:cardview-v7:$supportLibVersion"
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:cardview-v7:25.1.0'
 }
