--- a/androidApp/GophertainmentAndroid/app/build.gradle
+++ b/androidApp/GophertainmentAndroid/app/build.gradle
@@ -30,5 +30,8 @@ dependencies {
     })
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:cardview-v7:$supportLibVersion"
+    compile "com.android.support:design:$supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibVersion"
     testCompile 'junit:junit:4.12'
+
 }
